2008-06-04  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Migo/Migo.Syndication/FeedManager.cs: Get rid of some racy
	wait handle usage that was causing shutdown to freeze sometimes.

2008-06-04  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	* src/Libraries/Migo/Migo.Syndication/RssParser.cs: Fix bug with earlier
	fix for <item> guids that would cause some duplicates under some
	circumstances.

2008-06-04  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmActions.cs: Fix
	bug with link we were generating for the Last.fm track page (BGO #536682).

2008-06-04  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs: Remove the
	icon from the Source Rename action (BGO #536559).

2008-06-04  Aaron Bockover  <abock@gnome.org>

	* src/Clients/Nereid/Nereid/PlayerInterface.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Windowing.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_DragAndDrop.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListViewBase.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Model.cs:
	A pretty disgusting hack that forces the style of our source view 
	GtkTreeView into our custom ListView widget so at least the ListView 
	will end up with the same color set as the GtkTreeView; this is a 
	giant and ugly hack that works around a pretty serious bug in some of 
	Ubuntu's themes where the selection background color is different for
	GtkTreeView widgets than for other widgets causing inconsistency and 